# huffman-tool

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  init-repo.sh  test-valgrind.sh  test.sh  tests.cpp  update-repo.sh  vcpkg.json
.github/workflows/: cpp.yml
ci-extra/: build.sh  test-valgrind.sh  test.sh
huffman-tool/: CMakeLists.txt  main.cpp
integration-tests/: tests.py
integration-tests/data/: default.profraw  simple.txt
lib/: CMakeLists.txt  coder.h  codeword.cpp  codeword.h  constants.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  encoding-decoding.cpp  encoding-decoding.h  huffman_tree.cpp  huffman_tree.h  istream_wrapper.cpp  istream_wrapper.h  node_comparer.h  ostream_wrapper.cpp  ostream_wrapper.h  signature_manager.h
lib/coding/: decoder.cpp  decoder.h  encoder.cpp  encoder.h
lib/utility/: codeword.cpp  codeword.h  constants.h  huffman_tree.cpp  huffman_tree.h
lib/wrappers/: istream_wrapper.cpp  istream_wrapper.h  ostream_wrapper.cpp  ostream_wrapper.h
unit-tests/: CMakeLists.txt  guard.h  library_correctness.cpp  performance_check.cpp  random_generator.h  ss.h  stream_compression_correctness.cpp  test_utils.h  tests.cpp
